added jupyter / ipykernel related deps

--- a/Maintenance.ipynb
+++ b/Maintenance.ipynb
@@ -45,13 +45,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c5713390-ada3-40ef-9458-4ff64b93983a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting langchain_community\n",
+      "  Downloading langchain_community-0.3.27-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Collecting langchain-core<1.0.0,>=0.3.66 (from langchain_community)\n",
+      "  Downloading langchain_core-0.3.68-py3-none-any.whl.metadata (5.8 kB)\n",
+      "Collecting langchain<1.0.0,>=0.3.26 (from langchain_community)\n",
+      "  Downloading langchain-0.3.26-py3-none-any.whl.metadata (7.8 kB)\n",
+      "Requirement already satisfied: SQLAlchemy<3,>=1.4 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from langchain_community) (2.0.41)\n",
+      "Requirement already satisfied: requests<3,>=2 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from langchain_community) (2.32.4)\n",
+      "Requirement already satisfied: PyYAML>=5.3 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from langchain_community) (6.0.2)\n",
+      "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from langchain_community) (3.12.14)\n",
+      "Requirement already satisfied: tenacity!=8.4.0,<10,>=8.1.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from langchain_community) (9.1.2)\n",
+      "Requirement already satisfied: dataclasses-json<0.7,>=0.5.7 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from langchain_community) (0.6.7)\n",
+      "Collecting pydantic-settings<3.0.0,>=2.4.0 (from langchain_community)\n",
+      "  Downloading pydantic_settings-2.10.1-py3-none-any.whl.metadata (3.4 kB)\n",
+      "Collecting langsmith>=0.1.125 (from langchain_community)\n",
+      "  Downloading langsmith-0.4.5-py3-none-any.whl.metadata (15 kB)\n",
+      "Collecting httpx-sse<1.0.0,>=0.4.0 (from langchain_community)\n",
+      "  Downloading httpx_sse-0.4.1-py3-none-any.whl.metadata (9.4 kB)\n",
+      "Requirement already satisfied: numpy>=1.26.2 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from langchain_community) (2.3.1)\n",
+      "Requirement already satisfied: aiohappyeyeballs>=2.5.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (2.6.1)\n",
+      "Requirement already satisfied: aiosignal>=1.4.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (1.4.0)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (25.3.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (1.7.0)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (6.6.3)\n",
+      "Requirement already satisfied: propcache>=0.2.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (0.3.2)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.17.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (1.20.1)\n",
+      "Requirement already satisfied: marshmallow<4.0.0,>=3.18.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from dataclasses-json<0.7,>=0.5.7->langchain_community) (3.26.1)\n",
+      "Requirement already satisfied: typing-inspect<1,>=0.4.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from dataclasses-json<0.7,>=0.5.7->langchain_community) (0.9.0)\n",
+      "Collecting langchain-text-splitters<1.0.0,>=0.3.8 (from langchain<1.0.0,>=0.3.26->langchain_community)\n",
+      "  Downloading langchain_text_splitters-0.3.8-py3-none-any.whl.metadata (1.9 kB)\n",
+      "Requirement already satisfied: pydantic<3.0.0,>=2.7.4 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from langchain<1.0.0,>=0.3.26->langchain_community) (2.11.7)\n",
+      "Requirement already satisfied: jsonpatch<2.0,>=1.33 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from langchain-core<1.0.0,>=0.3.66->langchain_community) (1.33)\n",
+      "Collecting packaging<25,>=23.2 (from langchain-core<1.0.0,>=0.3.66->langchain_community)\n",
+      "  Downloading packaging-24.2-py3-none-any.whl.metadata (3.2 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.7 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from langchain-core<1.0.0,>=0.3.66->langchain_community) (4.14.1)\n",
+      "Requirement already satisfied: jsonpointer>=1.9 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from jsonpatch<2.0,>=1.33->langchain-core<1.0.0,>=0.3.66->langchain_community) (3.0.0)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.7.4->langchain<1.0.0,>=0.3.26->langchain_community) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.33.2 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.7.4->langchain<1.0.0,>=0.3.26->langchain_community) (2.33.2)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from pydantic<3.0.0,>=2.7.4->langchain<1.0.0,>=0.3.26->langchain_community) (0.4.1)\n",
+      "Requirement already satisfied: python-dotenv>=0.21.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from pydantic-settings<3.0.0,>=2.4.0->langchain_community) (1.1.1)\n",
+      "Requirement already satisfied: charset_normalizer<4,>=2 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from requests<3,>=2->langchain_community) (3.4.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from requests<3,>=2->langchain_community) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from requests<3,>=2->langchain_community) (2.5.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from requests<3,>=2->langchain_community) (2025.7.9)\n",
+      "Requirement already satisfied: greenlet>=1 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from SQLAlchemy<3,>=1.4->langchain_community) (3.2.3)\n",
+      "Requirement already satisfied: mypy-extensions>=0.3.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain_community) (1.1.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from langsmith>=0.1.125->langchain_community) (0.28.1)\n",
+      "Collecting orjson<4.0.0,>=3.9.14 (from langsmith>=0.1.125->langchain_community)\n",
+      "  Downloading orjson-3.10.18-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl.metadata (41 kB)\n",
+      "Collecting requests-toolbelt<2.0.0,>=1.0.0 (from langsmith>=0.1.125->langchain_community)\n",
+      "  Downloading requests_toolbelt-1.0.0-py2.py3-none-any.whl.metadata (14 kB)\n",
+      "Requirement already satisfied: zstandard<0.24.0,>=0.23.0 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from langsmith>=0.1.125->langchain_community) (0.23.0)\n",
+      "Requirement already satisfied: anyio in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from httpx<1,>=0.23.0->langsmith>=0.1.125->langchain_community) (4.9.0)\n",
+      "Requirement already satisfied: httpcore==1.* in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from httpx<1,>=0.23.0->langsmith>=0.1.125->langchain_community) (1.0.9)\n",
+      "Requirement already satisfied: h11>=0.16 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from httpcore==1.*->httpx<1,>=0.23.0->langsmith>=0.1.125->langchain_community) (0.16.0)\n",
+      "Requirement already satisfied: sniffio>=1.1 in /opt/conda/envs/conda-ai/lib/python3.12/site-packages (from anyio->httpx<1,>=0.23.0->langsmith>=0.1.125->langchain_community) (1.3.1)\n",
+      "Downloading langchain_community-0.3.27-py3-none-any.whl (2.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m5.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading httpx_sse-0.4.1-py3-none-any.whl (8.1 kB)\n",
+      "Downloading langchain-0.3.26-py3-none-any.whl (1.0 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.0/1.0 MB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading langchain_core-0.3.68-py3-none-any.whl (441 kB)\n",
+      "Downloading langchain_text_splitters-0.3.8-py3-none-any.whl (32 kB)\n",
+      "Downloading packaging-24.2-py3-none-any.whl (65 kB)\n",
+      "Downloading pydantic_settings-2.10.1-py3-none-any.whl (45 kB)\n",
+      "Downloading langsmith-0.4.5-py3-none-any.whl (367 kB)\n",
+      "Downloading orjson-3.10.18-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl (136 kB)\n",
+      "Downloading requests_toolbelt-1.0.0-py2.py3-none-any.whl (54 kB)\n",
+      "Installing collected packages: packaging, orjson, httpx-sse, requests-toolbelt, pydantic-settings, langsmith, langchain-core, langchain-text-splitters, langchain, langchain_community\n",
+      "\u001b[2K  Attempting uninstall: packaging\n",
+      "\u001b[2K    Found existing installation: packaging 25.0\n",
+      "\u001b[2K    Uninstalling packaging-25.0:\n",
+      "\u001b[2K      Successfully uninstalled packaging-25.0\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10/10\u001b[0m [langchain_community]ngchain_community]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed httpx-sse-0.4.1 langchain-0.3.26 langchain-core-0.3.68 langchain-text-splitters-0.3.8 langchain_community-0.3.27 langsmith-0.4.5 orjson-3.10.18 packaging-24.2 pydantic-settings-2.10.1 requests-toolbelt-1.0.0\n"
+     ]
+    }
+   ],
    "source": [
     "# adding packages to your environment (change the package name as-needed)\n",
-    "!pip install llama_index"
+    "!pip install langchain_community"
    ]
   },
   {
@@ -64,6 +146,14 @@
     "# export the latest environment changes back to environment.yml\n",
     "!conda env export | sed 's/name: base/name: conda-ai/g' > environment.yml"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "862aad9c-c818-425e-8e87-9b933540d1f2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
